# bloombot

./: .env.example  .gitignore  LICENSE  README.md  eslint.config.js  hacs.json  info.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  validate.yaml
assets/3d-models/: bloombot.3mf  box.stl  lid.stl  sealing.stl  wall mount.stl
assets/videos/: bloombot-waving.webm
home-assistant/: floraflow-card.js
home-assistant/dashboard-examples/: bloombot-card-example.yaml  floraflow-card-example.yaml
kicad/bloombot/: bloombot.kicad_pro  bloombot.kicad_sch
kicad/floraflow/: floraflow.kicad_pro  floraflow.kicad_sch
src/: config.py  dht_sensor.py  gpio_manager.py  main.py  mqtt_handler.py  requirements-dev.txt  requirements.txt  scheduler.py  test_pin.py
tests/: test_gpio_manager.py  test_main.py  test_scheduler.py
