[project]
name = "bloombot"
version = "0.1.0"
description = "A lightweight irrigation controller using a Raspberry Pi, with Home Assistant integration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt==2.1.0",
    "lgpio; platform_system == 'Linux'",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
