[project]
name = "bloombot"
version = "0.1.0"
description = "A lightweight irrigation controller using a Raspberry Pi, with Home Assistant integration."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "paho-mqtt==2.1.0",
    "lgpio; platform_system == 'Linux'",
    "gpiozero; platform_system == 'Linux'",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
lint.select = ["E", "F", "I", "W"]
lint.ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true
